--- a/Style/style.css
+++ b/Style/style.css
@@ -1,6 +1,6 @@
 button {
   cursor: pointer;
-  background-color: #585858;
+  background-color: #2b3338;
   text-shadow: 2px 2px 3px black;
   border: none;
   -webkit-transition: all 0.5s ease-in-out 0s;
@@ -8,8 +8,9 @@ button {
 }
 
 button:hover {
-  background-color: #777;
-  color: #e9e9e9;
+  background-color: #d3d3d3;
+  color: #161a1d;
+  text-shadow: none;
 }
 
 .home-btn {
@@ -42,7 +43,7 @@ button:hover {
 .go-back-btn:hover {
   -webkit-transform: rotate(-360deg);
           transform: rotate(-360deg);
-  fill: red;
+  fill: #ba181b;
 }
 
 #main {
@@ -65,7 +66,7 @@ button:hover {
 
 #main-title {
   font-size: 11rem;
-  color: white;
+  color: #edf2f4;
   line-height: 3rem;
   font-weight: bold;
   margin-bottom: 7rem;
@@ -112,7 +113,7 @@ button:hover {
   min-height: 100vh;
 }
 
-.flowchart-heading {
+#flowchart .flowchart-heading {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,10 +122,10 @@ button:hover {
           justify-content: center;
 }
 
-#flowchart-h1 {
+#flowchart #flowchart-h1 {
   margin-top: 10rem;
   font-size: 10rem;
-  color: white;
+  color: #edf2f4;
   line-height: 3rem;
   font-weight: bold;
   margin-bottom: 7rem;
@@ -135,9 +136,9 @@ button:hover {
   z-index: 1;
 }
 
-#flowchart-red {
+#flowchart #flowchart-red {
   z-index: -1;
-  color: red;
+  color: #ba181b;
   font-size: 2.5rem;
   letter-spacing: 2.1rem;
   position: absolute;
@@ -145,16 +146,30 @@ button:hover {
   margin-top: 10rem;
 }
 
+#flowchart .flowchart-img-con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 10rem;
+}
+
+#flowchart #flowchart-img {
+  width: 80%;
+}
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Times New Roman", Times, serif;
-  color: white;
+  color: #edf2f4;
   font-size: 62.5%;
 }
 
 body {
-  background-color: #1f1f1f;
+  background-color: #08090c;
   min-height: 100vh;
 }
 /*# sourceMappingURL=style.css.map */
