--- a/Style/style.css
+++ b/Style/style.css
@@ -153,7 +153,8 @@ button:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 10rem;
+  margin-top: 4rem;
+  padding-bottom: 6rem;
 }
 
 #flowchart #flowchart-img {
