--- a/Style/_flowchart.scss
+++ b/Style/_flowchart.scss
@@ -33,7 +33,8 @@
   .flowchart-img-con {
     display: flex;
     justify-content: center;
-    margin-top: 10rem;
+    margin-top: 4rem;
+    padding-bottom: 6rem;
   }
 
   #flowchart-img {
