--- a/Style/style.css
+++ b/Style/style.css
@@ -176,11 +176,13 @@ button:hover {
 /*Flowchart boxes behind text*/
 .st0 {
   fill: #2b3338;
+  -webkit-transition: all 1s ease 0s;
+  transition: all 1s ease 0s;
 }
 
 .st0:hover {
-  -webkit-transition: all 0.5s ease-in-out 0s;
-  transition: all 0.5s ease-in-out 0s;
+  -webkit-transition: all 0.5s ease-out 0s;
+  transition: all 0.5s ease-out 0s;
   fill: #ba181b;
 }
 
