--- a/Style/_button.scss
+++ b/Style/_button.scss
@@ -51,3 +51,12 @@ button {
     fill: $red;
   }
 }
+
+.choice {
+  font-size: 2rem;
+  padding: 1.3rem 2rem;
+  width: 25rem;
+  border-radius: 1rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
