--- a/Style/style.css
+++ b/Style/style.css
@@ -93,7 +93,7 @@ button:hover {
 }
 
 /* Main text div, with display: flex */
-.start-intro {
+#start-intro {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
