--- a/Style/_first-page.scss
+++ b/Style/_first-page.scss
@@ -10,7 +10,8 @@
   font-size: 11rem;
   color: $text-color;
   line-height: 3rem;
-  font-weight: bold;
-  margin-bottom: 7rem;
+  margin-bottom: 8rem;
   text-shadow: 6px 6px 9px black;
+  font-weight: 500;
+  font-style: italic;
 }
