--- a/Style/style.css
+++ b/Style/style.css
@@ -85,6 +85,7 @@ button:hover {
 
 /* Me, myself and I - Main H1 */
 #main-title {
+  position: relative;
   font-size: 11rem;
   color: #edf2f4;
   line-height: 3rem;
@@ -94,6 +95,7 @@ button:hover {
   font-style: italic;
 }
 
+/* Animation */
 /* Main text div, with display: flex */
 #start-intro {
   display: -webkit-box;
@@ -134,7 +136,8 @@ button:hover {
   letter-spacing: 0.5px;
 }
 
-span {
+.span-text,
+.span-title {
   color: red;
 }
 
