--- a/Style/_first-page.scss
+++ b/Style/_first-page.scss
@@ -7,18 +7,17 @@
 /* Me, myself and I - Main H1 */
 
 #main-title {
-<<<<<<< HEAD
-  font-size: 15rem;
-=======
   position: relative;
   font-size: 11rem;
->>>>>>> 6337930f729ad602cab8c30f0369c841daccf3ba
   color: $text-color;
   line-height: 3rem;
   margin-bottom: 12rem;
   text-shadow: 6px 6px 9px black;
   font-weight: 500;
   font-style: italic;
-}
+  transition: all 0.3s ease-in-out 0s;
 
-/* Animation */
+  &:hover {
+    color: $red;
+  }
+}
