--- a/Style/style.scss
+++ b/Style/style.scss
@@ -24,6 +24,7 @@ $bg-color: #08090c;
 @import "first-page";
 @import "start-game";
 @import "flowchart";
+@import "bg";
 
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
@@ -39,23 +40,6 @@ $bg-color: #08090c;
 body {
   background-color: $bg-color;
   min-height: 100vh;
-}
-
-.bg {
-  position: fixed;
-  top: -50%;
-  left: -50%;
-  right: -50%;
-  bottom: -50%;
-  width: 200%;
-  height: 200vh;
-  background: url("http://assets.iceable.com/img/noise-transparent.png") repeat
-    0 0;
-  background-repeat: repeat;
-  animation: bg-animation 0.1s infinite;
-  opacity: 1;
-  visibility: visible;
-  z-index: -1;
 }
 
 /* Animation */
